--- a/public/partials/detalles.html
+++ b/public/partials/detalles.html
@@ -154,6 +154,9 @@ Actualice el navegador a la versión más reciente o instale <a target="_blank" 
                         <button type="button" ng-if="!procedimientoSeleccionado.eliminado" class="btn btn-default" aria-label="Left Align" ng-disabled="tiene_hijos > 0 || procedimientoSeleccionado.oculto"  ng-click="eliminarProcedimiento(procedimientoSeleccionado)">
                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> &nbsp;Eliminar procedimiento
                         </button>
+                        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="descargarExcel()">
+                            <span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;Descargar excel
+                        </button>
                         <span ng-if="tiene_hijos > 0 && !procedimientoSeleccionado.oculto"><br/>
                             No puede eliminar el procedimiento porque tiene hijos. Elimine los hijos antes de eliminar este procedimiento.
                         </span>
@@ -248,6 +251,12 @@ Actualice el navegador a la versión más reciente o instale <a target="_blank" 
 
                         </tr>
                     </tbody>
+                    <tfooter>
+                        <tr>
+                            <th></th>
+                            <th ng-repeat="mes in meses">{{mes}}</th>
+                        </tr>
+                    </tfooter>
                 </table>
                 <p>Para editar un valor de la tabla, pulse sobre la casilla correspondiente. Si desea editar en serie, pulse la tecla 'tabulador' para pasar a la siguiente casilla.</p>
                 <p>Hay campos que se calculan a partir de los datos introducidos en el resto. Las fórmulas usadas son:
@@ -293,8 +302,7 @@ Actualice el navegador a la versión más reciente o instale <a target="_blank" 
                 <div ng-repeat="graph in graphs" ng-if="graficasbarras && graph.data && !graficasgrandes" ng-class="{'col-lg-3':(numgraphs % 4 == 0),'col-lg-3':(numgraphs % 3 == 0)}" class="col-md-12 well">
                     <h5 class="text-danger text-center">{{graph.caption}}</h5>
                     <nvd3-multi-bar-chart noData="No hay datos que mostrar" data="graph.data" showXAxis="true" showYAxis="true" showLegend="true" interactive="true" height="350" xAxisTickValues="xAxisTickValuesFunction()" xAxisTickFormat="xAxisTickFormatFunction()" rotateLabels="45" forcey="graph.forcey">
-                        <svg>
-                        </svg>
+                        <svg></svg>
                     </nvd3-multi-bar-chart>
                 </div>				
                 <div ng-repeat="graph in graphs" ng-if="!graficasbarras && graph.data && graficasgrandes" style="clear:both" class="col-lg-12 well">
