periodos y graficos detalle

--- a/public/partials/periodos.html
+++ b/public/partials/periodos.html
@@ -20,9 +20,11 @@
 					</tr>
 				</tbody>
 			</table>
-
 			<p>Esta tabla representa los valores de cierre de los distintos períodos de los procedimientos. Un 0 representará un período abierto, es decir de libre edición, mientras que un 1 representará un período cerrado. Un período cerrado no podrá ser modificado.
 			</p>
+			<button type="button" class="btn btn-default" ng-click="nuevaAnualidad()">
+				<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Crear anualidad.
+			</button>
 		</div>
 	</div>
 </div>
