Funcionalidad estadística nueva

--- a/public/partials/actividad.html
+++ b/public/partials/actividad.html
@@ -1,5 +1,5 @@
 
-<div ng-controller="ActividadCtrl" class="row">
+<div class="row">
 	<div ng-class="{'col-lg-5': !oculto, 'hidden': oculto}" class="left animated">
 		<div class="panel panel-danger">
 			<div class="panel-heading">
