--- a/public/partials/informes.html
+++ b/public/partials/informes.html
@@ -7,18 +7,185 @@
                     <h3 class="panel-title">{{funcionalidad.label}}</h3>
                 </div>
                 <div class="panel-body">
-                    <div class="btn-group">
+                    <div class="btn-group col-md-6">
                         <button ng-class="{disabled: actualizando > 0}" ng-repeat="fn in funcionalidad.fn" class="btn btn-default" ng-click="invoke(fn.cmd)">{{fn.label}}</button>
-                        <p ng-if="actualizando > 0">Generando informe...</p>
                     </div>
-                    <br /><br />
+                    <div class="btn-group col-md-6" style="text-align:center">
+                    <p  ng-If="funcionalidad.selectanyo">
                     Seleccione el año:
-                    <select ng-model="anyoSelected" ng-options="a.name for a in anyos" ng-change="updateAnyoSelected(anyoSelected.code)">
-                    </select>
+                    <select ng-model="anyoSelected" ng-options="a.name for a in anyos"></select>
+                    </p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="clear"></div>
+        <p ng-If="actualizando > 0">Generando informe...</p>
         <div class="alert {{respuesta.clase}}" role="alert" ng-repeat="respuesta in respuestas">{{respuesta.mensaje}}</div>
+    </div>
+</div>
+<div class="row" ng-if="arbol.length>0">
+    <div ng-class="{'col-lg-5': !oculto, 'hidden': oculto}" class="left animated">
+        <div class="panel panel-danger">
+            <div class="panel-heading">
+                <h3 class="panel-title">
+                    Organismos
+                </h3>
+            </div>
+            <div class="panel-body">            
+                <input type="text" ng-model="texto.$" placeholder="Filtro" style="margin-bottom:1em" class="form-control"/>
+                <ul ng-if="arbol.length" style="padding-left:0.6em">
+                    <li ng-repeat="element in arbol |filter:texto| filter:filtrojerarquia" ng-class="{'list-group-item-warning':element.id==seleccionado.id}">
+                        <p>
+                        <strong>
+                            [{{element.id}}] &nbsp;
+                        </strong>
+                        <span ng-click="setSeleccionado(element)" class="cursor"  title="Engloba {{element.numprocedimientos}} procedimientos">
+                            {{element.title}} 
+                        </span>
+                        <span class="badge pull-right">{{element.numprocedimientos}}</span>
+                        </p>
+                        <ul class="list-group" ng-if="element.nodes" style="clear:both">
+                            <li class="list-group-item" ng-repeat="elemen in element.nodes |filter:texto | filter:filtrojerarquia" ng-class="{'list-group-item-danger':elemen.id==seleccionado.id}">
+                            <p>
+                                <strong>
+                                    [{{elemen.id}}] &nbsp;
+                                </strong>
+                                <span ng-click="setSeleccionado(elemen)" class="cursor" title="Engloba {{elemen.numprocedimientos}} procedimientos">
+                                    {{elemen.title}} 
+                                </span>
+                                <span class="badge pull-right">{{elemen.numprocedimientos}}</span>
+                                </p>
+                                <ul ng-if="elemen.nodes" style="clear:both">
+                                    <li ng-repeat="eleme in elemen.nodes |filter:texto |filter:filtrojerarquia"  ng-class="{'list-group-item-danger':eleme.id==seleccionado.id}" >
+                                    <p>
+                                        <strong>
+                                            [{{eleme.id}}] &nbsp;
+                                        </strong>
+                                        <span ng-class="{'bg-danger':eleme.id==seleccionado.id }" ng-click="setSeleccionado(eleme)" class="cursor" title="Engloba {{eleme.numprocedimientos}} procedimientos">
+                                            {{eleme.title}} 
+                                        </span>
+                                        <span class="badge pull-right">{{eleme.numprocedimientos}}</span>
+                                        </p>
+                                        <ul ng-if="eleme.nodes" style="clear:both">
+                                            <li ng-repeat="elem in eleme.nodes |filter:texto |filter:filtrojerarquia">
+                                            <p>
+                                                <strong>
+                                                    [{{elem.id}}] &nbsp;
+                                                </strong>
+                                                <span ng-class="{'bg-danger':elem.id==seleccionado.id }" ng-click="setSeleccionado(elem)" class="cursor"  title="Engloba {{elem.numprocedimientos}} procedimientos">
+                                                    {{elem.title}} 
+                                                </span>
+                                                <span class="badge pull-right">{{elem.numprocedimientos}}</span>
+                                                </p>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated" id="detallesjerarquia" ng-If="seleccionado ">
+        <div ng-click="mutextoculto()">
+            <span class="glyphicon glyphicon-fullscreen pull-right">
+            </span>
+            <h2>
+                {{seleccionado.title}}
+            </h2>
+        </div>
+        <table class="table table-striped table-bordered table-condensed table-hover" id="procedimientostable">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th ng-colspan="columnasocultas ? 1 : 3" >{{seleccionado.title}}</th>
+                    <th ng-colspan="columnasocultas ? 1 : 3" ng-repeat="nodo in seleccionado.nodes">{{nodo.title}}</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>N&ordm; de procedimientos</th>
+                    <td ng-colspan="columnasocultas ? 1 : 3" style="text-align:right">{{seleccionado.numprocedimientos}}</td>
+                    <td ng-colspan="columnasocultas ? 1 : 3" ng-repeat="nodo in seleccionado.nodes" style="text-align:right">{{nodo.numprocedimientos}}</td>
+                </tr>
+                <tr class="info">
+                    <th>AÑO 2013</th>
+                    <th>TOTALES</th>
+                    <th ng-hide="columnasocultas">MEDIAS MENSUALES</th>
+                    <th ng-hide="columnasocultas"></th>
+                    <th ng-repeat-start="nodo in seleccionado.nodes">TOTALES</th>
+                    <th ng-hide="columnasocultas">MEDIAS MENSUALES</th>
+                    <th ng-hide="columnasocultas" ng-repeat-end></th>
+                </tr>
+                <tr>
+                    <th>Resueltos en 2013 totales</th>
+                    <th style="text-align:right">{{getTotales(seleccionado.id, 2013, 'total_resueltos') | numberFormat}}</th>
+                    <th ng-hide="columnasocultas"></th>
+                    <th ng-hide="columnasocultas"></th>
+                    <th ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right">{{getTotales(nodo.id, 2013, 'total_resueltos') | numberFormat}}</th>
+                    <th ng-hide="columnasocultas"></th>
+                    <th ng-hide="columnasocultas" ng-repeat-end></th>
+                </tr>
+                <tr class="info">
+                    <th>AÑO 2014</th>
+                    <th>TOTALES</th>
+                    <th ng-hide="columnasocultas">MEDIAS MENSUALES</th>
+                    <th ng-hide="columnasocultas"></th>
+                    <th ng-repeat-start="nodo in seleccionado.nodes">TOTALES</th>
+                    <th ng-hide="columnasocultas">MEDIAS MENSUALES</th>
+                    <th ng-hide="columnasocultas" ng-repeat-end></th>
+                </tr>
+                <tr>
+                    <th>Solicitados</th>
+                    <td style="text-align:right">{{getTotales(seleccionado.id, 2014, 'solicitados') | numberFormat}}</td>
+                    <td ng-hide="columnasocultas"></td>
+                    <td ng-hide="columnasocultas"></td>
+                    <td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right">{{getTotales(nodo.id, 2014, 'solicitados') | numberFormat}}</td>
+                    <td ng-hide="columnasocultas"></td>
+                    <td ng-hide="columnasocultas" ng-repeat-end></td>
+                </tr>
+                <tr>
+                    <th>Iniciados</th>
+                    <td style="text-align:right">{{getTotales(seleccionado.id, 2014, 'iniciados') | numberFormat}}</td>
+                    <td ng-hide="columnasocultas"></td>
+                    <td ng-hide="columnasocultas"></td>
+                    <td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right">{{getTotales(nodo.id, 2014, 'iniciados') | numberFormat}}</td>
+                    <td ng-hide="columnasocultas"></td>
+                    <td ng-hide="columnasocultas" ng-repeat-end></td>                  
+                </tr>
+                <tr>
+                    <th>Resueltos totales</th>
+                    <td style="text-align:right">{{getTotales(seleccionado.id, 2014, 'total_resueltos') | numberFormat}}</td>
+                    <td ng-hide="columnasocultas"></td>
+                    <td ng-hide="columnasocultas"></td>
+                    <td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right">{{getTotales(nodo.id, 2014, 'total_resueltos') | numberFormat}}</td>
+                    <td ng-hide="columnasocultas"></td>
+                    <td ng-hide="columnasocultas" ng-repeat-end></td>                    
+                </tr>
+                <tr>
+                    <th>Pendientes (a final de periodo= ultimos pendientes)</th>
+                    <td style="text-align:right">{{fnGetStatsNode(seleccionado.id, 2014).value.pendientes[11]| numberFormat}}</td>
+                    <td ng-hide="columnasocultas"></td>
+                    <td ng-hide="columnasocultas"></td>
+                    <td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right">{{fnGetStatsNode(nodo.id, 2014).value.pendientes[11]  | numberFormat}}</td>
+                    <td ng-hide="columnasocultas"></td>
+                    <td ng-hide="columnasocultas" ng-repeat-end></td>
+                </tr>
+
+                <tr ng-repeat="campo in campos">
+                    <th>{{campo | translate}}</th>
+                    <td style="text-align:right">{{getTotales(seleccionado.id, 2014, campo) | numberFormat}}</td>
+                    <td ng-hide="columnasocultas"></td>
+                    <td ng-hide="columnasocultas"></td>
+                    <td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right">{{getTotales(nodo.id, 2014, campo) | numberFormat}}</td>
+                    <td ng-hide="columnasocultas"></td>
+                    <td ng-hide="columnasocultas" ng-repeat-end></td>
+                </tr>
+            </tbody>
+        </table>
+        <button class="button btn" ng-click="mostrarcolumnasocultas()">Mostrar columnas ocultas</button>
     </div>
 </div>
