--- a/public/partials/informes.html
+++ b/public/partials/informes.html
@@ -90,7 +90,7 @@
         </div>
     </div>
     <div ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated" id="detallesjerarquia" ng-If="seleccionado ">
-        <div ng-click="mutextoculto()">
+        <div class="cursor" ng-click="mutextoculto()">
             <span class="glyphicon glyphicon-fullscreen pull-right">
             </span>
             <h2>
@@ -101,91 +101,140 @@
             <thead>
                 <tr>
                     <th></th>
-                    <th ng-colspan="columnasocultas ? 1 : 3" >{{seleccionado.title}}</th>
-                    <th ng-colspan="columnasocultas ? 1 : 3" ng-repeat="nodo in seleccionado.nodes">{{nodo.title}}</th>
+                    <th class="cursor" ng-colspan="columnasocultas ? 1 : 3" ng-click="setDetallado(seleccionado)" ng-class="{'warning': detallado.id==seleccionado.id}">{{seleccionado.title}}</th>
+                    <th class="cursor" ng-colspan="columnasocultas ? 1 : 3" ng-repeat="nodo in seleccionado.nodes" ng-click="setDetallado(nodo)" ng-class="{'warning': detallado.id==nodo.id}">{{nodo.title}}</th>
                 </tr>
             </thead>
+            <tfoot>
+                <tr>
+                    <th></th>
+                    <th class="cursor" ng-colspan="columnasocultas ? 1 : 3" ng-click="setDetallado(seleccionado)" ng-class="{'warning': detallado.id==seleccionado.id}">{{seleccionado.title}}</th>
+                    <th class="cursor" ng-colspan="columnasocultas ? 1 : 3" ng-repeat="nodo in seleccionado.nodes" ng-click="setDetallado(nodo)" ng-class="{'warning': detallado.id==nodo.id}">{{nodo.title}}</th>
+                </tr>
+            </tfoot>
             <tbody>
                 <tr>
                     <th>N&ordm; de procedimientos</th>
-                    <td ng-colspan="columnasocultas ? 1 : 3" style="text-align:right">{{seleccionado.numprocedimientos}}</td>
-                    <td ng-colspan="columnasocultas ? 1 : 3" ng-repeat="nodo in seleccionado.nodes" style="text-align:right">{{nodo.numprocedimientos}}</td>
+                    <td ng-colspan="columnasocultas ? 1 : 3" style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}">{{seleccionado.numprocedimientos}}</td>
+                    <td ng-colspan="columnasocultas ? 1 : 3" ng-repeat="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">{{nodo.numprocedimientos}}</td>
+                </tr>
+                <tr>
+                    <th>N&ordm; de procedimientos con datos en 2014</th>
+                    <td ng-colspan="columnasocultas ? 1 : 3" style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}">{{fnGetStatsNode(seleccionado.id, 2014).value.numProcedimientosConSolicitudes}}</td>
+                    <td ng-colspan="columnasocultas ? 1 : 3" ng-repeat="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">{{fnGetStatsNode(nodo.id, 2014).value.numProcedimientosConSolicitudes}}</td>
+                </tr>
+                <tr>
+                    <th>N&ordm; de procedimientos con datos en 2015</th>
+                    <td ng-colspan="columnasocultas ? 1 : 3" style="text-align:right" data-node-id="{{seleccionado.id}}" ng-class="{'warning': detallado.id==seleccionado.id}">{{fnGetStatsNode(seleccionado.id, 2015).value.numProcedimientosConSolicitudes}}</td>
+                    <td ng-colspan="columnasocultas ? 1 : 3" ng-repeat="nodo in seleccionado.nodes" style="text-align:right" data-node-id="{{nodo.id}}" ng-class="{'warning': detallado.id==nodo.id}">{{fnGetStatsNode(nodo.id, 2015).value.numProcedimientosConSolicitudes}}</td>
                 </tr>
                 <tr class="info">
                     <th>AÑO 2013</th>
-                    <th>TOTALES</th>
-                    <th ng-hide="columnasocultas">MEDIAS MENSUALES</th>
-                    <th ng-hide="columnasocultas"></th>
-                    <th ng-repeat-start="nodo in seleccionado.nodes">TOTALES</th>
-                    <th ng-hide="columnasocultas">MEDIAS MENSUALES</th>
-                    <th ng-hide="columnasocultas" ng-repeat-end></th>
+                    <th style="text-align:center" ng-class="{'warning': detallado.id==seleccionado.id}">TOTALES</th>
+                    <th style="text-align:center" ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}">MEDIAS MENSUALES</th>
+                    <th style="text-align:center" ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></th>
+                    <th style="text-align:center" ng-repeat-start="nodo in seleccionado.nodes" ng-class="{'warning': detallado.id==nodo.id}">TOTALES</th>
+                    <th style="text-align:center" ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}">MEDIAS MENSUALES</th>
+                    <th style="text-align:center" ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></th>
                 </tr>
                 <tr>
                     <th>Resueltos en 2013 totales</th>
-                    <th style="text-align:right">{{getTotales(seleccionado.id, 2013, 'total_resueltos') | numberFormat}}</th>
-                    <th ng-hide="columnasocultas"></th>
-                    <th ng-hide="columnasocultas"></th>
-                    <th ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right">{{getTotales(nodo.id, 2013, 'total_resueltos') | numberFormat}}</th>
-                    <th ng-hide="columnasocultas"></th>
-                    <th ng-hide="columnasocultas" ng-repeat-end></th>
+                    <th style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}">{{getTotales(seleccionado.id, 2013, 'total_resueltos') | numberFormat}}</th>
+                    <th ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></th>
+                    <th ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></th>
+                    <th ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">{{getTotales(nodo.id, 2013, 'total_resueltos') | numberFormat}}</th>
+                    <th ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}"></th>
+                    <th ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></th>
                 </tr>
                 <tr class="info">
                     <th>AÑO 2014</th>
-                    <th>TOTALES</th>
-                    <th ng-hide="columnasocultas">MEDIAS MENSUALES</th>
-                    <th ng-hide="columnasocultas"></th>
-                    <th ng-repeat-start="nodo in seleccionado.nodes">TOTALES</th>
-                    <th ng-hide="columnasocultas">MEDIAS MENSUALES</th>
-                    <th ng-hide="columnasocultas" ng-repeat-end></th>
+                    <th style="text-align:center" ng-class="{'warning': detallado.id==seleccionado.id}">TOTALES</th>
+                    <th style="text-align:center" ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}">MEDIAS MENSUALES</th>
+                    <th style="text-align:center" ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></th>
+                    <th style="text-align:center" ng-repeat-start="nodo in seleccionado.nodes" ng-class="{'warning': detallado.id==nodo.id}">TOTALES</th>
+                    <th style="text-align:center" ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}">MEDIAS MENSUALES</th>
+                    <th style="text-align:center" ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></th>
                 </tr>
                 <tr>
                     <th>Solicitados</th>
-                    <td style="text-align:right">{{getTotales(seleccionado.id, 2014, 'solicitados') | numberFormat}}</td>
-                    <td ng-hide="columnasocultas"></td>
-                    <td ng-hide="columnasocultas"></td>
-                    <td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right">{{getTotales(nodo.id, 2014, 'solicitados') | numberFormat}}</td>
-                    <td ng-hide="columnasocultas"></td>
-                    <td ng-hide="columnasocultas" ng-repeat-end></td>
+                    <td style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}">{{getTotales(seleccionado.id, 2014, 'solicitados') | numberFormat}}</td>
+                    <td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+                    <td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+                    <td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">{{getTotales(nodo.id, 2014, 'solicitados') | numberFormat}}</td>
+                    <td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}"></td>
+                    <td ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>
                 </tr>
                 <tr>
                     <th>Iniciados</th>
-                    <td style="text-align:right">{{getTotales(seleccionado.id, 2014, 'iniciados') | numberFormat}}</td>
-                    <td ng-hide="columnasocultas"></td>
-                    <td ng-hide="columnasocultas"></td>
-                    <td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right">{{getTotales(nodo.id, 2014, 'iniciados') | numberFormat}}</td>
-                    <td ng-hide="columnasocultas"></td>
-                    <td ng-hide="columnasocultas" ng-repeat-end></td>                  
+                    <td style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}">{{getTotales(seleccionado.id, 2014, 'iniciados') | numberFormat}}</td>
+                    <td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+                    <td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+                    <td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">{{getTotales(nodo.id, 2014, 'iniciados') | numberFormat}}</td>
+                    <td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}"></td>
+                    <td ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>                  
                 </tr>
                 <tr>
                     <th>Resueltos totales</th>
-                    <td style="text-align:right">{{getTotales(seleccionado.id, 2014, 'total_resueltos') | numberFormat}}</td>
-                    <td ng-hide="columnasocultas"></td>
-                    <td ng-hide="columnasocultas"></td>
-                    <td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right">{{getTotales(nodo.id, 2014, 'total_resueltos') | numberFormat}}</td>
-                    <td ng-hide="columnasocultas"></td>
-                    <td ng-hide="columnasocultas" ng-repeat-end></td>                    
+                    <td style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}">{{getTotales(seleccionado.id, 2014, 'total_resueltos') | numberFormat}}</td>
+                    <td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+                    <td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+                    <td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">{{getTotales(nodo.id, 2014, 'total_resueltos') | numberFormat}}</td>
+                    <td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}"></td>
+                    <td ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>                    
                 </tr>
                 <tr>
                     <th>Pendientes (a final de periodo= ultimos pendientes)</th>
-                    <td style="text-align:right">{{fnGetStatsNode(seleccionado.id, 2014).value.pendientes[11]| numberFormat}}</td>
-                    <td ng-hide="columnasocultas"></td>
-                    <td ng-hide="columnasocultas"></td>
-                    <td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right">{{fnGetStatsNode(nodo.id, 2014).value.pendientes[11]  | numberFormat}}</td>
-                    <td ng-hide="columnasocultas"></td>
-                    <td ng-hide="columnasocultas" ng-repeat-end></td>
+                    <td style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}">{{fnGetStatsNode(seleccionado.id, 2014).value.pendientes[11]| numberFormat}}</td>
+                    <td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+                    <td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+                    <td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">{{fnGetStatsNode(nodo.id, 2014).value.pendientes[11]  | numberFormat}}</td>
+                    <td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}"></td>
+                    <td ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>
                 </tr>
-
                 <tr ng-repeat="campo in campos">
                     <th>{{campo | translate}}</th>
-                    <td style="text-align:right">{{getTotales(seleccionado.id, 2014, campo) | numberFormat}}</td>
-                    <td ng-hide="columnasocultas"></td>
-                    <td ng-hide="columnasocultas"></td>
-                    <td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right">{{getTotales(nodo.id, 2014, campo) | numberFormat}}</td>
-                    <td ng-hide="columnasocultas"></td>
-                    <td ng-hide="columnasocultas" ng-repeat-end></td>
+                    <td style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}">{{getTotales(seleccionado.id, 2014, campo) | numberFormat}}</td>
+                    <td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+                    <td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==seleccionado.id}"></td>
+                    <td ng-repeat-start="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">{{getTotales(nodo.id, 2014, campo) | numberFormat}}</td>
+                    <td ng-hide="columnasocultas" ng-class="{'warning': detallado.id==nodo.id}"></td>
+                    <td ng-hide="columnasocultas" ng-repeat-end ng-class="{'warning': detallado.id==nodo.id}"></td>
                 </tr>
             </tbody>
         </table>
-        <button class="button btn" ng-click="mostrarcolumnasocultas()">Mostrar columnas ocultas</button>
+        <p><button class="button btn" ng-click="mostrarcolumnasocultas()">Mostrar columnas ocultas</button></p>
+        <div ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated" id="detallesNodo" ng-If="detallado">
+            <h3>{{detallado.title}}</h3>
+            <table class="table table-striped table-bordered table-condensed table-hover full">
+                <caption>2014</caption>
+                <thead>
+                    <tr>
+                        <th>Indicador</th>
+                        <th ng-repeat="mes in $root.meses">{{mes}}</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Solicitados</th>
+                        <td ng-repeat="valor in fnGetStatsNode(detallado.id, 2014, campo).value['solicitados'] track by $index" style="text-align:right">{{ valor | numberFormat}}</td>
+                   </tr>
+                    <tr>
+                        <th>Iniciados</th>
+                        <td ng-repeat="valor in fnGetStatsNode(detallado.id, 2014, campo).value['iniciados'] track by $index" style="text-align:right">{{ valor | numberFormat}}</td>
+                    </tr>
+                    <tr>
+                        <th>Resueltos totales</th>
+                        <td ng-repeat="valor in fnGetStatsNode(detallado.id, 2014, campo).value['total_resueltos'] track by $index" style="text-align:right">{{ valor | numberFormat}}</td>
+                    </tr>
+                    <tr ng-repeat="campo in campos">
+                        <th>{{campo | translate}}</th>
+                        <td ng-repeat="valor in fnGetStatsNode(detallado.id, 2014, campo).value[campo] track by $index" style="text-align:right">{{ valor | numberFormat}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
+<style>
+.full  { width:100%;}
+</style>
