--- a/public/partials/informes.html
+++ b/public/partials/informes.html
@@ -100,14 +100,14 @@
         <table class="table table-striped table-bordered table-condensed table-hover" id="procedimientostable">
             <thead>
                 <tr>
-                    <th></th>
-                    <th class="cursor" ng-colspan="columnasocultas ? 1 : 3" ng-click="setDetallado(seleccionado)" ng-class="{'warning': detallado.id==seleccionado.id}">{{seleccionado.title}}</th>
-                    <th class="cursor" ng-colspan="columnasocultas ? 1 : 3" ng-repeat="nodo in seleccionado.nodes" ng-click="setDetallado(nodo)" ng-class="{'warning': detallado.id==nodo.id}">{{nodo.title}}</th>
+                    <th>Pulse para seleccionar una jerarquía más específica</th>
+                    <th class="cursor" ng-colspan="columnasocultas ? 1 : 3" ng-class="{'warning': detallado.id==seleccionado.id}">{{seleccionado.title}}</th>
+                    <th class="cursor" ng-colspan="columnasocultas ? 1 : 3" ng-repeat="nodo in seleccionado.nodes" ng-click="setSeleccionado(nodo)" ng-class="{'warning': detallado.id==nodo.id}">{{nodo.title}}</th>
                 </tr>
             </thead>
             <tfoot>
                 <tr>
-                    <th></th>
+                    <th>Pulse en esta fila para ver los detalles por meses</th>
                     <th class="cursor" ng-colspan="columnasocultas ? 1 : 3" ng-click="setDetallado(seleccionado)" ng-class="{'warning': detallado.id==seleccionado.id}">{{seleccionado.title}}</th>
                     <th class="cursor" ng-colspan="columnasocultas ? 1 : 3" ng-repeat="nodo in seleccionado.nodes" ng-click="setDetallado(nodo)" ng-class="{'warning': detallado.id==nodo.id}">{{nodo.title}}</th>
                 </tr>
@@ -115,8 +115,10 @@
             <tbody>
                 <tr>
                     <th>N&ordm; de procedimientos</th>
-                    <td ng-colspan="columnasocultas ? 1 : 3" style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}">{{seleccionado.numprocedimientos}}</td>
-                    <td ng-colspan="columnasocultas ? 1 : 3" ng-repeat="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">{{nodo.numprocedimientos}}</td>
+                    <td ng-colspan="columnasocultas ? 1 : 3" style="text-align:right" ng-class="{'warning': detallado.id==seleccionado.id}" >
+                        <a href="/actividad/{{seleccionado.id}}">{{seleccionado.numprocedimientos}}</a></td>
+                    <td ng-colspan="columnasocultas ? 1 : 3" ng-repeat="nodo in seleccionado.nodes" style="text-align:right" ng-class="{'warning': detallado.id==nodo.id}">
+                        <a href="/actividad/{{nodo.id}}">{{nodo.numprocedimientos}}</a></td>
                 </tr>
                 <tr>
                     <th>N&ordm; de procedimientos con datos en 2014</th>
