login. Login habilitado para usuarios no carm. versión preliminar.

--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -10,7 +10,7 @@
 			</label>
 			<div>
 				<button style="text-align: center;" class="topcoat-button full text-center">Entrar</button>
-			</div>
+			</div>		
 		</form>
 		<div ng-If="$root.loginCarm">
 			<p>Es necesario autenticarse vía servicio de autenticación CAS de la CARM. Para ello pulse en el botón de debajo, autentíquese y será redirigido otra vez a esta página. Pulse de nuevo en el botón y accederá al sistema.</p>
@@ -21,7 +21,11 @@
 			<div>
 				<button ng-click="login(credentials)" style="text-align: center" class="topcoat-button full text-center">Entrar</button>
 			</div>
-
+			<p><br/>
+				Si no es un usuario autorizado para autenticarse a través del servicio CAS de la CARM y 
+				dispone de una contraseña para el sistema SICI puede autenticarse desde 
+				<a href="" ng-click="$root.loginCarm=false; credentials.notcarmuser=true;">aqu&iacute;</a>
+			</p>
 		</div>
 		<p style="text-align:center" ng-if="mensaje" class="alert alert-danger">{{mensaje}}</p>
 		<!--[if lt IE 9]>
