--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -35,7 +35,7 @@
 		</p>
 		<![endif]-->
 	</div>
-	<div style="position:absolute; bottom:1em;right:1em; width:350px; height:350px;{{imagen}};background-repeat:no-repeat; background-size:contain; background-position:center center"></div>
+	<div style="position:absolute; bottom:1em;right:1em; width:20em; height:20em;{{imagen}};background-repeat:no-repeat; background-size:contain; background-position:center center"></div>
 	<h3>Sistema Integrado de Control de Indicadores</h3>
 </div>
 <div style="clear:both"></div>
