Revisión de código: eliminación de código innecesario y eslint

--- a/public/partials/stats.html
+++ b/public/partials/stats.html
@@ -29,7 +29,7 @@
 						</thead>
 						<tfoot>
 							<tr>
-								<th>Total<span ng-click="exportXLS($index)" class="pull-right glyphicon glyphicon-floppy-disk">
+								<th>Total<span ng-click="$root.exportXLS('tabladatos'+$index, 'estadisticas')" class="pull-right glyphicon glyphicon-floppy-disk">
 								</span>
 							</th>
 							<td class="numberCell">{{graph.sum}}</td>
